0.39

0.38 2015-08-25T22:39:09+02:00
 - Update Map::Tube::CLI to 0.10 version.
 - Update Task::Map::Tube::Metro to 0.02 version.

0.37 2015-08-07T17:35:06+02:00
 - Update Map::Tube::CLI 0.09 version.

0.36 2015-05-19T14:02:41+02:00
 - Update Map::Tube::CLI 0.08 version.
 - Update Module::Install to 1.16 version.

0.35 2015-04-28T15:59:07+02:00
 - Update Map::Tube to 3.00 version.
 - Update Map::Tube::CLI 0.07 version.

0.34 2015-03-28T18:09:27+01:00
 - Move metro modules to Task::Map::Tube::Metro.
 - Remove obsolete test module dependency.

0.33 2015-03-28T17:49:47+01:00
 - Update Map::Tube to 2.97 version.
 - Update Map::Tube::Berlin to 0.09 version.
 - Update Map::Tube::CLI 0.06 version.
 - Update Map::Tube::London to 0.72 version.
 - Update Map::Tube::Plugin::Formatter to 0.07 version.
 - Update Map::Tube::Plugin::FuzzyFind 0.08 version.

0.32 2015-03-24T22:57:17+01:00
 - Add Map::Tube::CLI 0.02 version.
 - Update Map::Tube to 2.94 version.
 - Update Map::Tube::KoelnBonn to 0.09 version.
 - Update Map::Tube::Plugin::Formatter to 0.06 version.
 - Update Map::Tube::Plugin::FuzzyFind 0.07 version.

0.31 2015-03-23T13:14:16+01:00
 - Add Map::Tube::Plugin::Formatter 0.03 version.
 - Update Map::Tube to 2.93 version.
 - Update Map::Tube::London to 0.71 version.
 - Update Map::Tube::Vienna to 0.04 version.

0.30 2015-03-15T23:30:47+01:00
 - Update Map::Tube to 2.89 version.
 - Update Map::Tube::Berlin to 0.08 version.
 - Update Map::Tube::Dnipropetrovsk to 0.03 version.
 - Update Map::Tube::London to 0.70 version.
 - Update Map::Tube::Nanjing to 0.02 version.
 - Update Map::Tube::Prague to 0.10 version.
 - Update Map::Tube::Yekaterinburg to 0.03 version.
 - Update Map::Tube::Vienna to 0.03 version.
 - Update Map::Tube::Warsaw to 0.04 version.

0.29 2015-03-11T08:06:18+01:00
 - Update Map::Tube to 2.88 version.
 - Update Map::Tube::Glasgow to 0.07 version.
 - Update Map::Tube::KoelnBonn to 0.08 version.
 - Update Map::Tube::Lyon to 0.06 version.