@@ -1,7 +1,8 @@
 TODO
 ====
-1. Improve SEE ALSO section in doc.
 2.
 
 Applied
 =======
+1. Improve SEE ALSO section in doc.
+OK [20150825] skim
