@@ -1,4 +1,5 @@
 0.39
+ - Improve SEE ALSO section in doc.
 
 0.38 2015-08-25T22:39:09+02:00
  - Update Map::Tube::CLI to 0.10 version.
